# tmotorcan-cpp

./: CMakeLists.txt  Makefile  README.md  install.bash
.github/workflows/: ci.yaml
include/: Button.hpp  Component.hpp  Dashboard.hpp  Input.hpp  Menu.hpp  TMotor.hpp  ak60.hpp  tmotor.hpp
include/client/: Color.hpp  Component.hpp  Controllers.hpp  Dashboard.hpp  Entry.hpp  KeyInput.hpp  Selection.hpp  itox.hpp
src/: CMakeLists.txt  ak60.hpp  ak60test.cpp  client.cpp  main.cpp  tm.py  tmotor  tmotor.cpp  unit.cpp
src/tmotor/: CMakeLists.txt
src/tmotor/include/: tmotor.hpp
src/tmotor/src/: tmotor.cpp
src/tmotorui/: CMakeLists.txt
src/tmotorui/include/: Button.hpp  Dashboard.hpp  Input.hpp  Menu.hpp
src/tmotorui/src/: tmotorui.cpp
tests/: CMakeLists.txt  tmotortest.cpp
